@@ -596,6 +596,7 @@ DISSECTOR_SRC = \
 	packet-exec.c		\
 	packet-exported_pdu.c	\
 	packet-extreme.c	\
+	packet-fc00.c		\
 	packet-fc.c		\
 	packet-fcct.c		\
 	packet-fcdns.c		\
